# Code-Explorer

./: CMakeLists.txt  codeeditor.cpp  codeeditor.h  codehighlighter.cpp  codehighlighter.h  codeviewer.cpp  codeviewer.h  codeviewerwindow.cpp  codeviewerwindow.h  folderdelegate.cpp  folderdelegate.h  folderdialog.cpp  folderdialog.h  iconfactory.cpp  iconfactory.h  iconprovider.cpp  iconprovider.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  minimap.cpp  minimap.h  resources.qrc  ribbongroup.cpp  ribbongroup.h
